--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "nanoid": "^3.2.0",
         "react-router-dom": "^6.2.1"
     }
 }
